updated registration handler
